--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "ng2-charts": "^1.6.0",
+    "ng2-daterange-picker": "^1.1.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
